--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, html {
 
 /* Header */
 .header {
-    background-color: #007bff;
+    background-color: #FFCC33;
     color: white;
     text-align: center;
     padding: 15px;
